# pigify

./: .dockerignore  .env.example  .gitignore  .hadolint.yaml  .markdownlint.json  .pre-commit-config-fix.yaml  .pre-commit-config.yaml  .replit  Dockerfile  README.md  TODO.md  docker-compose.yml  env.example  osv-scanner.toml  package-lock.json  package.json  pyproject.toml  replit.md  skills-lock.json  todo-spotify.md
.claude/: CONVENTIONS.md  TESTS.md  WORKFLOW.md
.github/: dependabot.yml
.zap/: baseline-rules.tsv
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: auth.py  demo.py  errors.py  favorites.py  health.py  integrations.py  player.py  playlists.py  recipes.py  version.py
backend/app/auth/: __init__.py  dev_bypass.py  gate.py  invites.py  invites_cli.py  provisioning.py  session.py
backend/app/db/: __init__.py  base.py  bootstrap.py  cli.py  engines.py  paths.py  session.py
backend/app/db/models/: __init__.py  system.py  user.py
backend/app/db/repositories/: __init__.py  enrichment_cache.py  invites.py  saved_filters.py  saved_sorts.py  scrobble_queue.py  service_connections.py  settings.py  sync_state.py  track_stats.py  user_settings.py  users.py
backend/app/models/: favorites.py  playlist.py
backend/app/services/: cache_cleanup.py  connections.py  favorites.py  lastfm.py  musicbrainz.py  recipes.py  scrobble_retry.py  scrobbler.py  sort_fields.py  spotify.py  wikipedia.py
backend/migrations/: alembic.ini
backend/migrations/system/: alembic.ini  env.py
backend/migrations/system/versions/: 0001_initial.py  0002_custom_display_name.py  0003_invites.py
backend/migrations/user/: alembic.ini  env.py
backend/migrations/user/versions/: 0001_initial.py  0002_scrobble_queue.py  0003_user_settings.py
backend/tests/: _helpers.py  test_api_auth.py  test_api_demo.py  test_api_favorites.py  test_api_health.py  test_api_integrations.py  test_api_player.py  test_api_playlists.py  test_api_recipes.py  test_api_version.py  test_auth_session.py  test_cache_cleanup.py  test_config.py  test_connections_service.py  test_db_cli.py  test_db_paths.py  test_db_teardown.py  test_dev_bypass.py  test_enrichment_cache_repo.py  test_favorites_service.py  test_gate.py  test_invites.py  test_invites_repo.py  test_lastfm.py  test_models.py  test_musicbrainz.py  test_recipe_dsl.py  test_recipes_persistence.py  test_reorder.py  test_saved_sorts_persistence.py  test_scrobble_queue.py  test_scrobble_retry.py  test_service_connections_repo.py  test_settings_repo.py  test_sort_fields.py  test_spotify_service.py  test_track_stats_repo.py  test_user_settings_repo.py  test_users_repo.py  test_wikipedia.py
config/: .gitkeep
data/: pigify.db  pigify.db-shm  pigify.db-wal
docker/: docker-compose.yml
docs/: ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md  DEVELOP.md  INTEGRATIONS.md  ROADMAP.md  SPOTIFY_SETUP.md  THEMING.md  branding-design.md  (+1 more)
(+128 files in other folders)
