[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.19",
    "alembic>=1.13",
    "fastapi==0.121.3",
    "greenlet>=3.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pyasn1==0.6.3",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.22",
    "spotipy==2.25.1",
    "sqlalchemy>=2.0",
    "starlette==0.49.1",
    "uvicorn[standard]>=0.44.0",
]
