[tool.poetry]
name = "pigify"
version = "0.1.0"
description = "Backend API for Pigify, a custom Spotify frontend"
authors = ["Alan Young <claude@harleypig.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.121.3,<1.0"
uvicorn = { extras = ["standard"], version = ">=0.44.0,<1.0" }
starlette = ">=0.49.1,<1.0"
spotipy = ">=2.25.1,<3.0"
pydantic = ">=2.13.2,<3.0"
pydantic-settings = ">=2.13.1,<3.0"
sqlalchemy = "^2.0"
aiosqlite = ">=0.19"
alembic = "^1.13"
greenlet = ">=3.0"
httpx = ">=0.28.1,<1.0"
itsdangerous = ">=2.2.0,<3.0"
python-dotenv = ">=1.2.2,<2.0"
python-multipart = ">=0.0.20"
pyasn1 = ">=0.6.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15"
pyright = "^1.1"

[tool.poetry.group.test.dependencies]
pytest = "^9.0"
pytest-mock = "^3.14"
pytest-cov = "^6.0"
pytest-asyncio = "^1.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# E/F/I = pyflakes+pycodestyle+isort; B/C4/SIM/UP/RUF = code-smell sets.
select = ["E", "F", "I", "B", "C4", "SIM", "UP", "RUF"]
# RUF001: ambiguous unicode (en dash / curly quotes) in user-facing strings
# and comments is intentional typography here.
ignore = ["RUF001", "RUF002"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends/Query/Path/etc. are designed to be called in arg defaults.
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
  "fastapi.Path",
  "fastapi.Header",
  "fastapi.Cookie",
  "fastapi.Body",
  "fastapi.Form",
  "fastapi.File",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
